# example-application

./: .gitignore  README.md
.gitlab/merge_request_templates/: default.md
docs/: macos-x64-xcode-manual-config.md  macos-x64-xcode.md  windows-x64-vs2017-manual-config.md  windows-x64-vs2017.md
scripts/: brew_dependencies.sh  build.bat.in  build.sh.in  configure_dependency_rpath.bash  dependencies.csv  fetch_dependencies.cmd  make_install.bat.in  make_install.sh.in  make_install_debug.bat.in  make_install_debug.sh.in  reconfig.bat.in  reconfig.sh.in
src/: CMakeLists.txt  LICENSE
src/cmake/: qt.conf.in
src/cmake/modules/: OrgCMakeUtilities.cmake  configure_dependency_rpath.bash
src/dependencies/: CMakeLists.txt
src/dependencies/example-module/: CMakeLists.txt
src/dependencies/googletest/: CMakeLists.txt
src/docs/: CMakeLists.txt
src/example-application/: CMakeLists.txt
src/example-application/src/: main.cpp
